--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
         </div>
 
         <div class="footer">
-            <p>Составлено на основе урока Ani о родительном падеже в польском языке</p>
-            <p>Polski z Anią - изучайте польский с удовольствием! 🇵🇱</p>
+            <p>  о родительном падеже в польском языке</p>
+            <p>изучайте польский с удовольствием! 🇵🇱</p>
         </div>
     </div>
 
